--- a/styles/main.css
+++ b/styles/main.css
@@ -4,65 +4,69 @@ html {
 }
 
 body {
-  background-color: #9ec3d2;
+  background-color: #141414;
   color: #FFF;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Brandon Grotesque Regular', sans-serif;
   font-size: 15pt;
 }
-
-#index {
+/** Index display (grid)**/
+.index {
   display:grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: 40px 1fr 350px 50px;
-  grid-template-areas: 
-      "head img"
-      "main img"
-      "foot foot"
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-auto-rows: 30px;
 }
 
-#index > header {
-  grid-area: head;
+.nav {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row: 1;
+  background: linear-gradient(#9ec3d2, #67a0b7);
+  position: fixed;
+  width: 98.5%;
+  margin-top: -3px;
+}
+
+.header {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 2fr;
+  grid-row-start: 2;
+  grid-row-end: 4;
   margin-top: 5em;
   margin-left: 1.5em;
 }
-#index > main {
-  grid-area: main;
+
+.main {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 5;
+  grid-row-end: 7;
   margin-top: 8em;
-  margin-left: 2em;
-}
-#index > img {
-  grid-area: img;
-  margin-top: 5em;
-  margin-left: 3em;
-}
-#index > footer {
-  grid-area: foot;
-  background-color: #67a0b7;
+  margin-left: 7em;
 }
 
-.smaller-image {
-  width: 350px;
-  margin: auto;
-  border-radius: 3px;
+.img {
+  grid-column: 4;
+  grid-row-start: 6;
+  grid-row-end: 8;
+  margin-top: 6em;
 }
 
-#navbar {
-  display:
-  background-color: #67a0b7;
-  position: fixed;
-  padding-top: 0;
-  padding-bottom: 0;
-  padding-right: 2em;
-  padding-left: 2em;
-  margin-top: 0px;
-  margin-bottom: 9em;
-  border-bottom: 2px solid #FFF;
-  width: auto;
-}  
+.footer {
+  grid-column-start: 1;
+  grid-column-end: 7;
+  grid-row: 14;
+  padding-top: 15px;
+  padding-bottom: 40px;
+  margin-bottom: -3px;
+  background: linear-gradient(#67a0b7, #9ec3d2);
+}
+
+/** navbar settings **/
+#navbar {border-bottom: 2px solid #dbe2e8;}  
 
 #navbar a {
   float: left;
-  display: block;
   color: white;
   text-align: center;
   padding: 15px;
@@ -75,58 +79,121 @@ body {
 }
 
 nav ul {
-   float: inline-start;
    list-style: none;
    margin: 0px 5px 10px;
    padding: 0px;
-   text-align: right;
 }
 
 nav li {
    display: inline;
-   margin-right: 20px;
    color: #FFF;
+   position: relative;
+   left: 30%;
 }
 
+/** image settings **/
+.smaller-image {
+  width: 350px;
+  margin: auto;
+  border-radius: 3px;
+}
+
+/** Text settings **/
 h1 {
    font-size: 50px;
    margin: 30px;
-   font-family: 'Sacramento', cursive;
    color: white;
    text-align: center;
 }
 
 h2 {
-   font-size: 25px;
-   font-weight: normal;
+   font-size: 40px;
    margin: 30px;
    text-align: center;
 }
 
 h3 {
-   font-size: 20px;
+   font-size: 25px;
    font-weight: lighter;
    margin: 30px;
 }
 
 p { 
-  font-family: 'Lato'; 
-  color: #000
+  color: rgb(140, 136, 136)
+}
+
+/** Tech Blog display (grid) **/
+.blog {
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 30px;
+}
+
+.nav {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row: 1;
+  background: linear-gradient(#9ec3d2, #67a0b7);
+  position: fixed;
+  width: 98.5%;
+  margin-top: -3px;
+}
+
+.section {
+  grid-column-start: 1;  
+  grid-row-start: 3;
+  margin-top: 5em;
+  margin-left: 1.5em;
+}
+
+.article-1 {
+  grid-column-start: 2;
+  grid-row-start: 2;
+  margin-top: 8em;
+}
+
+.article-2 {
+  grid-column-start: 1;
+  grid-row-start: 8;
+  margin-top: 8em;
+  margin-left: 7em;
+}
+
+.article-3 {
+  grid-column-start: 2;
+  grid-row-start: 8;
+  margin-top: 8em;
+  margin-left: 7em;
+}
+
+.footer {
+  grid-column-start: 1;
+  grid-column-end: 7;
+  grid-row: 14;
+  padding-top: 15px;
+  padding-bottom: 40px;
+  margin-bottom: -3px;
+  background: linear-gradient(#67a0b7, #9ec3d2);
+}
+
+.credits {
+  font-size: 12px;
+  margin-top: 0.2px
 }
 
 .read-more {
-  color: #02ccba;
-  font-family: 'Open Sans', sans-serif;
+  color:rgb(140, 136, 136);
   font-weight: bold;
   text-decoration: none;
   text-transform: uppercase;
 }
 
+/** Footer settings **/
 footer{ 
    border-top: 2px solid #dbe2e8;
    margin-top: 17em;
    padding-top: 1em;
-   padding-bottom: 2em;
+   padding-bottom: 3.3em;
    text-align: center;
 }
 
