--- a/styles/main.css
+++ b/styles/main.css
@@ -49,17 +49,7 @@ body {
   grid-column: 4;
   grid-row-start: 6;
   grid-row-end: 8;
-  margin-top: 6em;
-}
-
-.footer {
-  grid-column-start: 1;
-  grid-column-end: 7;
-  grid-row: 14;
-  padding-top: 15px;
-  padding-bottom: 40px;
-  margin-bottom: -3px;
-  background: linear-gradient(#67a0b7, #9ec3d2);
+  margin-top: 7em;
 }
 
 /** navbar settings **/
@@ -97,6 +87,24 @@ nav li {
   margin: auto;
   border-radius: 3px;
 }
+.bigger-image {
+  width: 700px;
+  margin: auto;
+  border-radius: 3px;
+  margin-left: 10%;
+}
+
+.long-image {
+  width: 350px;
+  margin: 40px;
+  border: solid 3px rgb(190, 186, 186);
+}
+
+.medium-image {
+  width: 500px;
+  margin: 10px;
+  border: solid 3px rgb(190, 186, 186);
+}
 
 /** Text settings **/
 h1 {
@@ -119,24 +127,14 @@ h3 {
 }
 
 p { 
-  color: rgb(140, 136, 136)
+  color: rgb(190, 186, 186);
 }
 
-/** Tech Blog display (grid) **/
+/** Blogs display (grid) **/
 .blog {
   display:grid;
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: 30px;
-}
-
-.nav {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row: 1;
-  background: linear-gradient(#9ec3d2, #67a0b7);
-  position: fixed;
-  width: 98.5%;
-  margin-top: -3px;
 }
 
 .section {
@@ -166,19 +164,29 @@ p {
   margin-left: 7em;
 }
 
-.footer {
-  grid-column-start: 1;
-  grid-column-end: 7;
-  grid-row: 14;
-  padding-top: 15px;
-  padding-bottom: 40px;
-  margin-bottom: -3px;
-  background: linear-gradient(#67a0b7, #9ec3d2);
-}
-
 .credits {
   font-size: 12px;
-  margin-top: 0.2px
+  margin-top: 0.2px;
+  color: rgb(140, 136, 136)
+}
+
+.credits a {
+  color: rgb(140, 136, 136)
+}
+
+.credits a:hover {
+  color: rgb(190, 186, 186)
+}
+
+.article-name {
+  margin-top: 1px;
+  margin-bottom: 0.5px;
+  margin-left: -3px;
+}
+
+.article-description {
+  margin-top: 0.5px;
+  margin-bottom: 1px; 
 }
 
 .read-more {
@@ -188,6 +196,74 @@ p {
   text-transform: uppercase;
 }
 
+/** articles display **/
+.article-display {
+  display:grid;
+  grid-row: auto;
+}
+
+.h2 {
+  grid-row-start: 3;
+  margin-top: 5em;
+  margin-left: 1.5em;
+}
+
+.p {
+  grid-row-start: 4;
+  margin-top: 5em;
+  color: rgb(190, 186, 186);
+  margin-left: 70px;
+  margin-right: 90px;
+}
+
+.ul {
+  list-style: disc;
+  list-style-position: outside;
+  color: rgb(190, 186, 186)
+}
+
+#photo-gallery {
+  display: grid;
+  grid-template-areas: "photo-1 photo-2"
+                       "text-1 text-2"
+                       "photo-3 photo-4"
+                       "text-3 text-4";
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 4fr 0.5fr 2.5fr 1fr;
+}
+
+#photo-gallery > photo-1 {
+  grid-area: photo-1;
+}
+
+#photo-gallery > photo-2 {
+  grid-area: photo-2;
+}
+
+#photo-gallery > text-1 {
+  grid-area: text-1;
+}
+
+#photo-gallery > text-2 {
+  grid-area: text-2;
+}
+
+#photo-gallery > photo-3 {
+  grid-area: photo-3;
+}
+
+#photo-gallery > photo-4 {
+  grid-area: photo-4;
+}
+
+#photo-gallery > text-3 {
+  grid-area: text-3;
+}
+
+#photo-gallery > text-4 {
+  grid-area: text-4;
+}
+
 /** Footer settings **/
 footer{ 
    border-top: 2px solid #dbe2e8;
@@ -195,6 +271,26 @@ footer{
    padding-top: 1em;
    padding-bottom: 3.3em;
    text-align: center;
+}
+
+.footer {
+  grid-column-start: 1;
+  grid-column-end: 7;
+  grid-row: 14;
+  padding-top: 15px;
+  padding-bottom: 50px;
+  margin-bottom: -3px;
+  background: linear-gradient(#67a0b7, #9ec3d2);
+}
+
+.footer-article {
+  grid-column-start: 1;
+  grid-column-end: 7;
+  grid-row: 17;
+  padding-top: 15px;
+  padding-bottom: 20px;
+  margin-bottom: -3px;
+  background: linear-gradient(#67a0b7, #9ec3d2);
 }
 
 
