--- a/styles/main.css
+++ b/styles/main.css
@@ -7,10 +7,11 @@ body {
   background-color: #f7f5f1;
   color: #5e6464;
   font-family: 'Brandon Grotesque Regular', sans-serif;
-  font-size: 15pt;
+  font-size: 1.8vw;
 }
 /** Index display (grid)**/
 .index {
+  width: 100vw;
   display:grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-auto-rows: 3.7vh;
@@ -22,9 +23,12 @@ body {
   grid-row: 1;
   background-color: #a5c6b1;
   position: fixed;
-  width: 98.5%;
+  padding-left: 1.2vw;
+  padding-right: 1.2vw;
+  width: 100%;
   margin-top: -3px;
   font-family: 'Inter', sans-serif;
+  font-weight: bold;
 }
 
 .header {
@@ -33,45 +37,55 @@ body {
   grid-row-start: 2fr;
   grid-row-start: 2;
   grid-row-end: 4;
-  margin-top: 5em;
-  margin-left: 1.5em;
-}
-
-.main {
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-start: 5;
-  grid-row-end: 7;
-  margin-top: 8em;
-  margin-left: 7em;
+  margin-top: 18vh;
+  margin-left: 1vw;
 }
 
 .img {
+  width: 35vw;
   grid-column: 4;
   grid-row-start: 6;
   grid-row-end: 8;
-  margin-top: 7em;
+  margin-top: 17vh;
+}
+
+.footer-home {
+  grid-column-start: 1;
+  grid-column-end: 7;
+  grid-row-start: 26;
+  padding-top: 2vh;
+  padding-bottom: 5vh;
 }
 
 /** navbar settings **/
-#navbar {border-bottom: 2px solid #faf4ea}  
+#navbar {
+  border-bottom: 2px solid #faf4ea;
+  padding-left: 1.2vw;
+  padding-right: 1.2vw;
+  margin-top: -3px;
+}  
 
 #navbar a {
-  float: left;
-  color: #cc883e;
+  color: #b464a8;
   text-align: center;
-  padding: 15px;
+  padding-left: 1.2vw;
+  padding-right: 1.2vw;
+  margin-top: -3px;
   text-decoration: none;
 }
 
 #navbar a:hover {
   background-color: #faf4ea;
   color: #5e6464;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 1.2vw;
+  padding-right: 1.2vw;
+  margin-top: -3px;
 }
 
 nav ul {
    list-style: none;
-   margin: 0px 5px 10px;
    padding: 0px;
    font-family: 'Inter', sans-serif;
 }
@@ -80,51 +94,54 @@ nav li {
    display: inline;
    color: #cc883e;
    position: relative;
-   left: 30%;
+   left: 7vw;
    font-family: 'Inter', sans-serif;
 }
 
 /** image settings **/
 .smaller-image {
-  width: 350px;
+  width: 35vw;
   margin: auto;
-  border-radius: 3px;
+  border-radius: 5%
 }
 .bigger-image {
-  width: 700px;
+  width: 65vw;
   margin: auto;
-  border-radius: 3px;
-  margin-left: 10%;
+  border-radius: 2%;
+  margin-left: 5%;
 }
 
 .long-image {
-  width: 350px;
-  margin: 40px;
+  width: 33vw;
+  margin-left: 5%;
 }
 
 .medium-image {
-  width: 500px;
-  margin: 10px;
+  width: 45vw;
+  margin-top: 5%;
+  margin-left: 1%;
 }
 
 /** Text settings **/
 h1 {
-   font-size: 50px;
-   margin: 30px;
-   color: #cc883e;
+   font-size: 5vw;
+   margin: 4%;
+   color: #d9b85c;
    text-align: center;
 }
 
 h2 {
-   font-size: 40px;
-   margin: 30px;
+   font-size: 4vw;
+   margin: 4%;
    text-align: center;
+   font-family: 'Inter', sans-serif;
+
 }
 
 h3 {
-   font-size: 25px;
+   font-size: 2.3vw;
    font-weight: lighter;
-   margin: 30px;
+   text-align: center;
 }
 
 p { 
@@ -166,7 +183,7 @@ p {
 }
 
 .credits {
-  font-size: 12px;
+  font-size: 0.9em;
   margin-top: 0.2px;
   color: rgb(140, 136, 136)
 }
@@ -180,14 +197,15 @@ p {
 }
 
 .article-name {
-  margin-top: 1px;
-  margin-bottom: 0.5px;
-  margin-left: -3px;
+  margin-bottom: 0.3em;
+  text-align: left;
+  color:#353e3e;
+  font-family: 'Inter', sans-serif;
 }
 
 .article-description {
-  margin-top: 0.5px;
-  margin-bottom: 1px; 
+  margin-top: -0.3em;
+  margin-bottom: 0.5em; 
 }
 
 .read-more {
@@ -195,7 +213,17 @@ p {
   text-decoration: none;
   text-transform: uppercase;
   color: #cb8f8d;
+  font-family: 'Inter', sans-serif;
 }
+
+.footer-tech { 
+  grid-column-start: 1;
+  grid-column-end: 7;
+  grid-row-start: 22;
+  padding-top: 2vh;
+  padding-bottom: 4vh;
+}
+
 
 /** articles display **/
 .article-display {
@@ -213,14 +241,8 @@ p {
   grid-row-start: 4;
   margin-top: 5em;
   color: #5e6464;
-  margin-left: 70px;
-  margin-right: 90px;
-}
-
-.ul {
-  list-style: disc;
-  list-style-position: outside;
-  color: #5e6464;
+  margin-left: 7%;
+  margin-right: 8%;
 }
 
 #photo-gallery {
@@ -265,34 +287,23 @@ p {
   grid-area: text-4;
 }
 
-/** Footer settings **/
-footer{ 
-   margin-top: 17em;
-   padding-top: 1em;
-   padding-bottom: 3.3em;
-   text-align: center;
-   color: #cc883e;
-   font-family: 'Inter', sans-serif;
-}
-
-.footer {
-  grid-column-start: 1;
-  grid-column-end: 7;
-  grid-row: 14;
-  padding-top: 15px;
-  padding-bottom: 50px;
-  margin-bottom: -3px;
-  background-color: #a5c6b1;
-}
-
 .footer-article {
   grid-column-start: 1;
   grid-column-end: 7;
-  grid-row: 17;
-  padding-top: 15px;
-  padding-bottom: 20px;
-  margin-bottom: -3px;
-  background-color: #a5c6b1;
+  grid-row: 25;
+  padding-top: 2vh;
+  padding-bottom: 3vh;
+  margin-bottom: -10px;
+}
+
+/** Footer settings **/
+footer {
+  background-color:#d7cbd4;
+  color:#b08c28;
+  font-family: 'Inter', sans-serif;
+  text-align: center;
+  font-family: 'Inter', sans-serif;
+  font-weight: bold;
 }
 
 
