--- a/styles/main.css
+++ b/styles/main.css
@@ -6,56 +6,52 @@ html {
 body {
   background-color: #f7f5f1;
   color: #5e6464;
-  font-family: 'Brandon Grotesque Regular', sans-serif;
+  font-family: 'Inter', sans-serif;
+  font-weight: lighter;
   font-size: 1.8vw;
+  height: 100vh;
 }
 /** Index display (grid)**/
-.index {
-  width: 100vw;
-  display:grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-auto-rows: 3.7vh;
+#body-grid {
+  display: grid;
+  grid-template-rows: minmax(min-content max-content) minmax(min-content max-content) minmax(min-content max-content);
+  grid-gap: 8vh;
 }
 
-.nav {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row: 1;
+#body-grid > nav {
   background-color: #a5c6b1;
+  font-family: 'Inter', sans-serif;
+  font-weight: bold;
   position: fixed;
   padding-left: 1.2vw;
   padding-right: 1.2vw;
   width: 100%;
-  margin-top: -3px;
-  font-family: 'Inter', sans-serif;
-  font-weight: bold;
 }
 
-.header {
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-start: 2fr;
-  grid-row-start: 2;
-  grid-row-end: 4;
+#body-grid > main {
   margin-top: 18vh;
   margin-left: 1vw;
 }
 
-.img {
-  width: 35vw;
-  grid-column: 4;
-  grid-row-start: 6;
-  grid-row-end: 8;
-  margin-top: 17vh;
+#body-grid > footer {
+  padding-top: 3vh;
+  padding-bottom: 3vh;
 }
 
-.footer-home {
-  grid-column-start: 1;
-  grid-column-end: 7;
-  grid-row-start: 26;
-  padding-top: 2vh;
-  padding-bottom: 5vh;
+#inner-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 2vw;
 }
+
+#inner-grid > text {
+  padding: 2vw;
+}
+
+#inner-grid > img {
+  padding: 2vw;
+}
+
 
 /** navbar settings **/
 #navbar {
@@ -92,18 +88,26 @@ nav ul {
 
 nav li {
    display: inline;
-   color: #cc883e;
+   color: #b464a8;
    position: relative;
    left: 7vw;
    font-family: 'Inter', sans-serif;
 }
 
+
 /** image settings **/
+.home-image {
+  width: 35vw;
+  margin-top: 4%;
+  border-radius: 10%;
+}
+
 .smaller-image {
   width: 35vw;
-  margin: auto;
-  border-radius: 5%
+  margin-top: 4%;
+  border-radius: 5%;
 }
+
 .bigger-image {
   width: 65vw;
   margin: auto;
@@ -112,12 +116,12 @@ nav li {
 }
 
 .long-image {
-  width: 33vw;
+  width: 25vw;
   margin-left: 5%;
 }
 
 .medium-image {
-  width: 45vw;
+  width: 35vw;
   margin-top: 5%;
   margin-left: 1%;
 }
@@ -125,6 +129,8 @@ nav li {
 /** Text settings **/
 h1 {
    font-size: 5vw;
+   font-family: 'Brandon Grotesque Regular', sans-serif;
+   font-weight: 200;
    margin: 4%;
    color: #d9b85c;
    text-align: center;
@@ -135,7 +141,6 @@ h2 {
    margin: 4%;
    text-align: center;
    font-family: 'Inter', sans-serif;
-
 }
 
 h3 {
@@ -148,11 +153,27 @@ p {
   color: #5e6464;
 }
 
-/** Blogs display (grid) **/
+/** Tech Blog display (grid) **/
+#inner-grid-tech {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 2vw;
+}
+
+#inner-grid > header {
+  padding: 2vw;
+}
+
+#inner-grid > article {
+  padding: 2vw;
+}
+
+
+/** Cultural Blog display (grid) **/
 .blog {
   display:grid;
   grid-template-columns: 1fr 1fr;
-  grid-auto-rows: 30px;
+  grid-auto-rows: auto;
 }
 
 .section {
@@ -216,84 +237,35 @@ p {
   font-family: 'Inter', sans-serif;
 }
 
-.footer-tech { 
-  grid-column-start: 1;
-  grid-column-end: 7;
-  grid-row-start: 22;
-  padding-top: 2vh;
-  padding-bottom: 4vh;
-}
-
 
 /** articles display **/
-.article-display {
-  display:grid;
-  grid-row: auto;
+#inner-grid-gallery-photo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1vw;
 }
 
-.h2 {
-  grid-row-start: 3;
-  margin-top: 5em;
-  margin-left: 1.5em;
+#inner-grid-gallery-photo > div {
+  padding: 0.5vh 3vw;
+  margin: 2% -2% -15% -6%;
 }
 
-.p {
+.article-text {
   grid-row-start: 4;
   margin-top: 5em;
   color: #5e6464;
-  margin-left: 7%;
-  margin-right: 8%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
-#photo-gallery {
-  display: grid;
-  grid-template-areas: "photo-1 photo-2"
-                       "text-1 text-2"
-                       "photo-3 photo-4"
-                       "text-3 text-4";
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 4fr 0.5fr 2.5fr 1fr;
+ls {
+  list-style:disc;
+  list-style-position: outside;
+  display:list-item;
 }
 
-#photo-gallery > photo-1 {
-  grid-area: photo-1;
-}
-
-#photo-gallery > photo-2 {
-  grid-area: photo-2;
-}
-
-#photo-gallery > text-1 {
-  grid-area: text-1;
-}
-
-#photo-gallery > text-2 {
-  grid-area: text-2;
-}
-
-#photo-gallery > photo-3 {
-  grid-area: photo-3;
-}
-
-#photo-gallery > photo-4 {
-  grid-area: photo-4;
-}
-
-#photo-gallery > text-3 {
-  grid-area: text-3;
-}
-
-#photo-gallery > text-4 {
-  grid-area: text-4;
-}
-
-.footer-article {
-  grid-column-start: 1;
-  grid-column-end: 7;
-  grid-row: 25;
-  padding-top: 2vh;
-  padding-bottom: 3vh;
-  margin-bottom: -10px;
+.explanation {
+  font-style: italic;
 }
 
 /** Footer settings **/
