--- a/styles/main.css
+++ b/styles/main.css
@@ -7,15 +7,16 @@ body {
   background-color: #f7f5f1;
   color: #5e6464;
   font-family: 'Inter', sans-serif;
-  font-weight: lighter;
-  font-size: 1.8vw;
-  height: 100vh;
+  font-size: 18px;
+  
 }
 /** Index display (grid)**/
 #body-grid {
   display: grid;
-  grid-template-rows: minmax(min-content max-content) minmax(min-content max-content) minmax(min-content max-content);
-  grid-gap: 8vh;
+  grid-template-rows: repeat(auto-fit, minmax(300px max-content));
+  grid-gap: 10em;
+  width: 100%;
+  max-width: 1280px;
 }
 
 #body-grid > nav {
@@ -23,9 +24,8 @@ body {
   font-family: 'Inter', sans-serif;
   font-weight: bold;
   position: fixed;
-  padding-left: 1.2vw;
-  padding-right: 1.2vw;
   width: 100%;
+  text-align: center;
 }
 
 #body-grid > main {
@@ -34,78 +34,78 @@ body {
 }
 
 #body-grid > footer {
-  padding-top: 3vh;
-  padding-bottom: 3vh;
+  font-family: 'Inter', sans-serif;
+  font-weight: bold;
+  width: 100%;
+  text-align: center;
 }
 
 #inner-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 2vw;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-gap: 1rem;
+  width: 100%;
+  max-width: 1280px;
+  margin: 70px 10px 100px;
 }
 
-#inner-grid > text {
-  padding: 2vw;
-}
-
-#inner-grid > img {
-  padding: 2vw;
+@media (max-width: 700px) {
+   #inner-grid {
+     display: block;
+   }
 }
 
 
 /** navbar settings **/
 #navbar {
-  border-bottom: 2px solid #faf4ea;
-  padding-left: 1.2vw;
-  padding-right: 1.2vw;
   margin-top: -3px;
+  text-align: center;
 }  
 
 #navbar a {
   color: #b464a8;
   text-align: center;
-  padding-left: 1.2vw;
-  padding-right: 1.2vw;
-  margin-top: -3px;
   text-decoration: none;
+  padding: 5px;
+  text-align: center;
 }
 
 #navbar a:hover {
-  background-color: #faf4ea;
+  background-color: #f7f5f1;
   color: #5e6464;
-  padding-top: 2%;
-  padding-bottom: 2%;
-  padding-left: 1.2vw;
-  padding-right: 1.2vw;
-  margin-top: -3px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
 }
 
 nav ul {
    list-style: none;
-   padding: 0px;
    font-family: 'Inter', sans-serif;
+   text-align: center;
 }
 
 nav li {
    display: inline;
    color: #b464a8;
-   position: relative;
-   left: 7vw;
    font-family: 'Inter', sans-serif;
+   padding: 5px;
+   text-align: center;
 }
 
 
 /** image settings **/
 .home-image {
-  width: 35vw;
+  width: 350px;
   margin-top: 4%;
   border-radius: 10%;
+  margin-left: 15%;
 }
 
 .smaller-image {
-  width: 35vw;
+  width: 350px;
   margin-top: 4%;
   border-radius: 5%;
+  margin-left: 20px;
 }
 
 .bigger-image {
@@ -118,17 +118,17 @@ nav li {
 .long-image {
   width: 25vw;
   margin-left: 5%;
+  margin-bottom: -5px;
 }
 
 .medium-image {
   width: 35vw;
-  margin-top: 5%;
-  margin-left: 1%;
+  margin-top: 40px;
 }
 
 .credits {
-  font-size: 0.9em;
-  margin-top: 0.2px;
+  font-size: 1.8vh;
+  margin: 0.2px 20px 10px;
   color: rgb(140, 136, 136)
 }
 
@@ -143,7 +143,7 @@ nav li {
 
 /** Text settings **/
 h1 {
-   font-size: 5vw;
+   font-size: 50px;
    font-family: 'Brandon Grotesque Regular', sans-serif;
    font-weight: 200;
    margin: 4%;
@@ -152,14 +152,17 @@ h1 {
 }
 
 h2 {
-   font-size: 4vw;
-   margin: 4%;
+   font-size: 40px;
+   margin-top: 50px;
+   margin-bottom: 50px;
+   color: #d9b85c;
    text-align: center;
    font-family: 'Inter', sans-serif;
+   text-align: center;
 }
 
 h3 {
-   font-size: 2.3vw;
+   font-size: 25px;
    font-weight: lighter;
    text-align: center;
 }
@@ -170,22 +173,9 @@ p {
 
 
 /** Tech Blog display (grid) **/
-#inner-grid-tech {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 2vw;
-}
-
-#inner-grid > header {
-  padding: 2vw;
-}
-
-#inner-grid > article {
-  padding: 2vw;
-}
 
 .article-name {
-  margin-bottom: 0.3em;
+  margin:10px 20px 5px;
   text-align: left;
   color:#353e3e;
   font-family: 'Inter', sans-serif;
@@ -193,11 +183,11 @@ p {
 }
 
 .article-description {
-  margin-top: -0.3em;
-  margin-bottom: 0.5em; 
+  margin: -5px 20px;
 }
 
 .read-more {
+  margin: 10px 20px 30px;
   font-weight: bold;
   text-decoration: none;
   text-transform: uppercase;
@@ -212,32 +202,31 @@ p {
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: auto;
 }
+.blog-post {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 1rem;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  margin-bottom: 100px;
+ height: 30em;
+}
 
 .section {
   grid-column-start: 1;  
-  grid-row-start: 3;
-  margin-top: 5em;
-  margin-left: 1.5em;
 }
 
 .article-1 {
   grid-column-start: 2;
-  grid-row-start: 2;
-  margin-top: 8em;
 }
 
 .article-2 {
   grid-column-start: 1;
-  grid-row-start: 8;
-  margin-top: 8em;
-  margin-left: 7em;
 }
 
 .article-3 {
   grid-column-start: 2;
-  grid-row-start: 8;
-  margin-top: 8em;
-  margin-left: 7em;
 }
 
 
@@ -269,6 +258,8 @@ ls {
 
 .explanation {
   font-style: italic;
+  margin: 10px;
+  padding-left: 30px;
 }
 
 /** Footer settings **/
@@ -279,6 +270,7 @@ footer {
   text-align: center;
   font-family: 'Inter', sans-serif;
   font-weight: bold;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: -3px;
 }
-
-
