--- a/styles/main.css
+++ b/styles/main.css
@@ -171,6 +171,17 @@ h3 {
   text-align: center;
 }
 
+h4 {
+  text-align: center;
+  font-size: 21px;
+  font-weight: lighter;
+  font-family: 'Brandon Grotesque Regular', sans-serif;
+  padding-top: 30px;
+  padding-right: 15%;
+  padding-bottom: 20px;
+  padding-left: 15%;
+}
+
 p { 
   color: #5e6464;
 }
