--- a/styles/main.css
+++ b/styles/main.css
@@ -116,7 +116,8 @@ nav li {
   }
   .home-image {
     width: 300px;
-    margin-left: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
   .smaller-image {
     width: 300px;
