--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,7 @@ body {
   color: #5e6464;
   font-family: 'Inter', sans-serif;
   font-size: 18px;
+  margin: 0px;
 }
 
 
@@ -51,10 +52,62 @@ body {
   margin: 70px 10px 100px;
 }
 
-@media (max-width: 700px) {
+
+/**  media queries  **/
+@media (min-width: 1101px) and (max-width: 1200px) {
+  #inner-grid {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(350px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(350px, 1fr));
+    grid-gap: 1rem;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1100px) {
    #inner-grid {
-     display: block;
+     display: grid;
+     grid-template-columns: repeat(2, minmax(350px, 1fr));
+     grid-template-rows: repeat(auto-fit, minmax(350px, 1fr));
+     grid-gap: 1rem;
    }
+}
+
+@media (min-width: 320px)and (max-width: 767px) {
+  #inner-grid {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(350px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(350px, 1fr));
+    grid-gap: 1rem;
+  }
+  
+  nav li {
+    font-size: 16px;
+    text-align: left;
+    padding: 4px;
+  }
+  nav ul {
+    text-align: left;
+    padding: 4px;
+  }
+  #navbar {
+    text-align: left;
+    padding-left: 4px;
+    padding-right: 4px;
+  }
+  #body-grid > nav {
+    text-align: left;
+  }
+  footer {
+    font-size: 17px;
+  }
+  .home-image {
+    width: 300px;
+    margin-right: 20px;
+    margin-left: -20px;
+  }
+  .smaller-image {
+    width: 300px;
+  }
 }
 
 
@@ -93,36 +146,7 @@ nav li {
    text-align: center;
 }
 
-@media (max-width: 400px) {
-  nav li {
-    font-size: 16px;
-    text-align: left;
-    padding: 4px;
-  }
-  nav ul {
-    text-align: left;
-    padding: 4px;
-  }
-  #navbar {
-    text-align: left;
-    padding-left: 4px;
-    padding-right: 4px;
-  }
-  #body-grid > nav {
-    text-align: left;
-  }
-  footer {
-    font-size: 17px;
-  }
-  .home-image {
-    width: 300px;
-    margin-right: 20px;
-    margin-left: -20px;
-  }
-  .smaller-image {
-    width: 300px;
-  }
-}
+
 
 
 /** image settings **/
